# zcash_batch_pay

./: .env  .gitignore  Cargo.toml  rust-toolchain.toml  wallet.db
src/: client.rs  main.rs
