[package]
name = "zcash_batch_pay"
rust-version = "1.85.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
zcash_client_backend = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["lightwalletd-tonic-transport", "transparent-inputs"] }
zcash_client_memory = { git ="https://github.com/zcash/librustzcash.git" , rev = "9f47de6", features = ["transparent-inputs"] }
zcash_client_sqlite = { git ="https://github.com/zcash/librustzcash.git" , rev = "9f47de6", features = ["transparent-inputs", "unstable"] }
zcash_protocol = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6"}
zcash_address = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6" }
zcash_transparent = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6"}
zcash_proofs = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["bundled-prover"]}
zcash_keys = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["orchard", "sapling", "transparent-inputs"]}

## gRPC Web dependencies
prost = { version = "0.14", default-features = false }
tonic = { version = "0.14", default-features = false, features = [
"tls-native-roots"
] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# ZIP 32
aes = "0.8"
bip0039 = "0.12"
fpe = { version = "0.6", default-features = false, features = ["alloc"] }
zip32 = { version = "0.2", default-features = false }

time = { version = "0.3.22", default-features = false }

# CSPRNG
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_distr = { version = "0.4", default-features = false }


rusqlite = { version = "0.37", features = ["bundled"] }
dotenvy = "0.15"